--- a/.github/workflows/build-book.yaml
+++ b/.github/workflows/build-book.yaml
@@ -12,7 +12,7 @@ name: Build
 
 jobs:
   build-deploy:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     permissions:
@@ -23,12 +23,14 @@ jobs:
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
+        env:
+          GITHUB_TOKEN: ${{ env.GITHUB_PAT }}
         with:
           tinytex: true
 
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
-        with:
-          target: gh-pages
         env:
           GITHUB_TOKEN: ${{ env.GITHUB_PAT }}
+        with:
+          target: gh-pages
