--- a/.github/workflows/build-book.yaml
+++ b/.github/workflows/build-book.yaml
@@ -22,7 +22,7 @@ jobs:
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
         env:
-          GITHUB_TOKEN: ${{ env.GITHUB_PAT }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tinytex: true
 
