--- a/.github/workflows/build-book.yaml
+++ b/.github/workflows/build-book.yaml
@@ -29,6 +29,6 @@ jobs:
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
         env:
-          GITHUB_TOKEN: ${{ env.GITHUB_PAT }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           target: gh-pages
