--- a/_quarto.yml
+++ b/_quarto.yml
@@ -36,6 +36,7 @@ book:
       - chap-planning.qmd
       - chap-selection.qmd
       - chap-evaluation.qmd
+      - chap-estimation
     - part: Data Auditing
       chapters:
       - chap-benford.qmd
