--- a/_quarto.yml
+++ b/_quarto.yml
@@ -44,6 +44,7 @@ book:
     - part: Algorithm Auditing
       chapters:
       - chap-fairness.qmd
+      - chap-fairness-evaluation.qmd
     - references.qmd
 format:
   html:
