--- a/_quarto.yml
+++ b/_quarto.yml
@@ -40,10 +40,10 @@ book:
       chapters:
       - chap-benford.qmd
       - chap-bunching.qmd
-    - part: Algorithm Auditing
-      chapters:
-      - chap-fairness-workflow.qmd
-      - chap-fairness.qmd
+    # - part: Algorithm Auditing
+    #   chapters:
+    #   - chap-fairness-workflow.qmd
+    #   - chap-fairness.qmd
     - references.qmd
 format:
   html:
